--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@types/mongoose": "^5.11.97",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "node": "^20.5.0"
   },
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
+    "prisma": "^5.1.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
